--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ footer p a {
 
 @media (min-width: 800px) {
   .container {
-    margin: 4rem auto 1rem auto;
+    margin: 4rem auto;
     max-width: 800px;
   }
 
