--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap');
+
 *,
 *::before,
 *::after {
@@ -20,25 +22,27 @@ body {
 }
 
 header h1 {
-  font-size: 2rem;
+  font-family: 'PT Serif', serif;
+  font-weight: 700;
+  font-size: 2.25rem;
   margin-bottom: 1rem;
 }
 
 header div h2 {
-  font-size: 1.2rem;
+  font-size: 1.125rem;
   margin-bottom: 1rem;
 }
 header div p {
-  font-size: 1rem;
-  line-height: 1.5rem;
-  max-width: 20rem;
+  font-size: 1.125rem;
+  line-height: 1.3125rem;
+  max-width: 25rem;
 }
 
 .main {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  margin: 1rem auto;
+  margin: 3rem auto;
 }
 .profile {
   width: 200px;
@@ -60,7 +64,11 @@ header div p {
   margin-top: -1rem;
   font-weight: bold;
 }
-
+.profile:nth-child(2),
+.profile:nth-child(4),
+.profile:nth-child(6) {
+  transform: translateY(20%);
+}
 footer p {
   text-align: center;
   font-size: 0.7rem;
@@ -96,6 +104,7 @@ footer p a {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     margin: 5rem auto;
+    grid-gap: 3rem;
   }
   .profile {
     width: 250px;
@@ -111,6 +120,14 @@ footer p a {
     bottom: 53%;
     left: 41%;
     transform: rotate(90deg);
+  }
+  .profile:nth-child(2),
+  .profile:nth-child(5) {
+    transform: translateY(20%);
+  }
+  .profile:nth-child(4),
+  .profile:nth-child(6) {
+    transform: translateY(0%);
   }
   footer p {
     font-size: 1rem;
